--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -3,9 +3,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -15,6 +12,8 @@ html {
   padding-left: 40px;     
   padding-right: 20px;   
 }
+
+/*Start Header*/
 .header {
     height: 70px;
     background-color: #e9e9e9;
@@ -23,13 +22,13 @@ html {
     left: 0;
     right: 0;
     padding-top: 20px;
-   /*Khi thuộc tính con lớn hơn thuộc tính cha thì ẩn đi*/
+    z-index: 1000;
 }
 
 .header-wrap {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* đẩy logo trái, menu icon phải */
+  justify-content: space-between;
 }
 
 .logo { 
@@ -70,7 +69,9 @@ html {
 .nav li:hover a {
     color: #10c9c3;
 }
+/*END Header*/
 
+/*START Banner*/
 .banner{
     margin-top: 70px;
     background-color: #e9e9e9;
@@ -78,8 +79,8 @@ html {
 
 .banner-box {
     max-width: 415px;
-    margin-left: 630px;
-    padding: 180px 20px;
+    margin-left: auto;
+    padding: 180px 0px;
 
 }
 
@@ -102,40 +103,52 @@ html {
     padding: 20px 0;
     cursor: pointer;
 }
+/*END Banner*/
 
-.content{
-
-}
-
+/*START content-about*/
 .content-section {
-    width: 640px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 100px 0;
+    max-width: 670px;
+    margin: 0 auto;
+    padding: 80px 0;
 }
 
 .section-heading {
     text-align: center;
+    font-size: 30px;
 }
 
 .section-sub-heading {
     margin-top: 30px;
     text-align: center;
-    line-height: 1px;
+    font-size: 16px;
+    line-height: 0.5;
 }
 
 .section-image {
     margin-top: 30px;
     text-align: center;
 }
+/*END content-about*/
 
-/*Content-skill*/
+/*START Content-skill*/
 .content-skills {
     background-color: #f8f9f9;
+    position: relative;
+    z-index: 999;
 }
 
 .skill-box {
-  display: flex;
+    display: flex;
+}
+
+.skill-left::after {
+    content: '';
+    width: 50%;
+    background-color: #838383;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .skill-left {
@@ -165,9 +178,9 @@ html {
     background-color: #10c9c3;
     height: 100%;
 }
-/*Content-skill*/
+/*END Content-skill*/
 
-/*Content-stat*/
+/*START Content-stat*/
 .content-stat {
     background-color: #10c9c3;
     color: #fff;
@@ -195,21 +208,33 @@ html {
     font-size: 17px;
     margin-bottom: 8px;
 }
-/*Content-stat*/
+/*END Content-stat*/
 
-/*Content-grid*/
+/*START Content-grid*/
 .content-grid{
+    background-color: #838383;
+}
+
+.grid-top {
     display: flex;
-    flex-wrap: wrap;
+}
+
+.grid-bottom {
+    display: flex;
 }
 
 .grid-box {
-    background-color: #838383;
     width: 25%;
     padding: 145px 0;
     text-align: center;
 }
+.grid-top .grid-box:nth-child(even) {
+    background-color: #dddddd;
+}
 
+.grid-bottom .grid-box:nth-child(odd) {
+    background-color: #dddddd;
+}
 .grid-icon {
     font-size: 40px;
     color: #838383;
@@ -220,9 +245,9 @@ html {
 }
 
 
-/*Content-grid*/
+/* END: Content-grid*/
 
-/*Content-load*/
+/*START Content-load*/
 .content-load {
     background-color: #f5f5f5;
     text-align: center;
@@ -232,14 +257,14 @@ html {
 .load-title {
     padding: 40px 0;
 }
-/*Content-load*/
+/*END Content-load*/
 
-/*Content video*/
+/*START Content-video*/
+
 .section-video {
     background-color: #e9e9e9;
-    margin-top: 54px;
-    margin-bottom: 100px;
-    padding: 239px 0;
+    margin-bottom: 95px;
+    padding: 230px 0;
 }
 
 .section-play-video {
@@ -256,19 +281,20 @@ html {
 
 .play-icon {
 }
-/*Content video*/
+/*END Content-video*/
 
-/*Content career*/
+/*START Content-career*/
 .content-career {
     background-color: #f5f5f5;
     padding: 100px 0;
 }
 
-.content-career-wrap {
+.content-career-top, .content-career-bottom{
     display: flex;
-    flex-wrap: wrap;
 }
+
 .career-box {
+    width: 25%;
     text-align: center;
 }
 
@@ -291,9 +317,9 @@ html {
     line-height: 25px;
     margin-bottom: 50px;
 }
-/*Content career*/
+/*END Content-career*/
 
-/*Content testimonials*/
+/*START Content-testimonials*/
 .content-testimonials {
     background-color: #10c9c3;
     color: #fff;
@@ -306,16 +332,19 @@ html {
     line-height: 37 px;
     margin-bottom: 30px;
 }
-/*Content testimonials*/
+/*END Content-testimonials*/
 
-/*Content Badge Logo*/
+/*START Content-Badge-Logo*/
 .content-badge-logo {
     padding: 30px 0;
-    display: flex;
-    justify-content: space-evenly;
 }
 
-.badge-logo1 {
+.badge-logo-wrap {
+    display: flex;
+}
+
+.badge-logo {
+    width: 20%;
 }
 
 .badge-logo2 {
@@ -330,7 +359,7 @@ html {
     margin-top: 42px;
 }
 
-/*Content Badge Logo*/
+/*END Content-Badge-Logo*/
 
 /*Content Contact*/
 .content-contact {
@@ -351,26 +380,25 @@ html {
 .contact-col {
     width: 100%;
     display: flex;
-    gap: 34px;
-    margin-bottom: 15px;
+    gap: 30px;
 }
 
 .form-half  {
    width: 50%;
-   padding: 15px 0;
 }
 
-.contact-col-full {
-    margin-bottom: 15px;
-}
-
+.contact-col, .contact-col-full, 
 .contact-col-height {
-    margin-bottom: 15px;
+    margin-bottom: 28px;
 }
 
 .form-control {
-    padding: 15px 0;
     width: 100%;
+}
+
+.form-half, .form-control {
+    padding: 15px 0 15px 20px;
+    border: none;
 }
 
 .contact-submit {
