--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -25,41 +25,36 @@
     z-index: 2;
 }
 
-.header-wrap {
+.header__wrap {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.logo { 
+.header__logo { 
     display: inline-block;
 }
 
-.logo img {
+.header__logo img {
     height: 30px;
 }
 
-.ham {
+.header__ham {
     display: none;
     cursor: pointer;
     padding: 20px;
     text-align: center;
 }
 
-.menu-icon-open, .menu-icon-close {
-    height: 30px;
-    width: 30px;
-}
-
 .nav {
   
 }
 
-.nav-logo {
+.nav__logo {
     display: none;
 }
 
-.nav-logo img {
+.nav__logo img {
     height: 30px;
 }
 .nav li {
@@ -77,16 +72,16 @@
     color: #10c9c3;
 }
 
-.nav-menu-mobile {
+.nav__menu--mobile {
     padding: 10px;
 }
-.nav-menu-mobile li {
+.nav__menu--mobile li {
     list-style: none;
     padding: 8px;
     border-bottom: 1px solid #252525;
 }
 
-.nav-menu-mobile li a{
+.nav__menu--mobile li a{
     text-decoration: none;
     color: #1d1d1d;
     font-size: 15px;
@@ -100,23 +95,23 @@
     background-color: #e9e9e9;
 }
 
-.banner-box {
+.banner__box {
     max-width: 415px;
     margin-left: auto;
     padding: 180px 0px;
 
 }
 
-.box-title {
+.box__title {
 
 }
 
-.box-text {
+.box__text {
     margin-top: 20px;
     line-height: 25px;
 }
 
-.box-link-contact {
+.box__link--contact {
     max-width: 180px;
     height: 54px;
     background-color: #10c9c3;
@@ -129,42 +124,42 @@
 /*END Banner*/
 
 /*START content-about*/
-.content-section {
+.content__section {
     max-width: 670px;
     margin: 0 auto;
     padding: 80px 0;
 }
 
-.section-heading {
+.section__heading {
     text-align: center;
     font-size: 30px;
 }
 
-.section-sub-heading {
+.section__sub-heading {
     margin-top: 30px;
     text-align: center;
     font-size: 16px;
     line-height: 0.5;
 }
 
-.section-image {
+.about__image {
     margin-top: 30px;
     text-align: center;
 }
 /*END content-about*/
 
 /*START Content-skill*/
-.content-skills {
+.skills {
     background-color: #f8f9f9;
     position: relative;
     z-index: 999;
 }
 
-.skill-box {
+.skill__box {
     display: flex;
 }
 
-.skill-left::after {
+.skill--left::after {
     content: '';
     width: 50%;
     background-color: #838383;
@@ -174,172 +169,216 @@
     bottom: 0;
 }
 
-.skill-left {
+.skill--left {
     width: 50%;
     padding: 160px 0;
 }
  
 
-.skill-heading {
+.skill__heading {
     font-size: 25px;
     margin-bottom: 30px;
 }
 
-.skill-item {
+.skill__item {
     font-size: 13px;
     margin-bottom: 25px;
 }
 
-.skill-bar{
+.skill__bar{
     height: 4px;
     background-color: #e9e9e9;
     margin-right: 30px;
     margin-bottom: 30px;
 }
 
-.skill-percent-bar{
+.skill__percent-bar{
     background-color: #10c9c3;
     height: 100%;
 }
 /*END Content-skill*/
 
 /*START Content-stat*/
-.content-stat {
+.stat {
     background-color: #10c9c3;
     color: #fff;
 }
 
-.content-stat-wrap {
+.stat__wrap {
     display: flex;
     padding: 95px 0;
 }
-.stat-box {
+.stat__box {
     display: flex;
     margin-right: 60px;
 }
 
-.stat-icon{
+.stat__icon{
     margin-right: 22px;
     font-size: 35px;
 }
 
-.stat-text {
+.stat__text {
 
 }
 
-.stat-number {
+.stat__number {
     font-size: 17px;
     margin-bottom: 8px;
 }
 /*END Content-stat*/
 
 /*START Content-grid*/
-.content-grid{
+.grid{
     background-color: #838383;
 }
 
-.grid-top {
+.grid--top {
     display: flex;
 }
 
-.grid-bottom {
+.grid--mid {
     display: flex;
 }
 
-.grid-box {
+.grid--bottom {
+    display: none;
+}
+
+.grid__box {
     width: 25%;
     padding: 145px 0;
     text-align: center;
 }
-.grid-top .grid-box:nth-child(even) {
+.grid--top .grid__box:nth-child(even) {
     background-color: #dddddd;
 }
 
-.grid-bottom .grid-box:nth-child(odd) {
+.grid--mid .grid__box:nth-child(odd) {
     background-color: #dddddd;
 }
-.grid-icon {
+
+.grid--bottom .grid__box:nth-child(even) {
+    background-color: #dddddd;
+}
+
+.grid__icon {
     font-size: 40px;
     color: #838383;
     opacity: 0;
 }
 
-.grid-box:hover {
+.grid__box:hover {
     background-color: #252525;
 }
 
-.grid-icon:hover {
+.grid__icon:hover {
     opacity: 1;
 }
 
+.grid--bottom.load {
+    display: flex;
+}
 
 /* END: Content-grid*/
 
 /*START Content-load*/
-.content-load {
+.load-work {
     background-color: #f5f5f5;
     text-align: center;
     padding: 40px 0;
 }
 
-.load-title {
+.load__title {
     padding: 40px 0;
+    cursor: pointer;
+}
+
+.load-work:hover {
+    background-color: #10c9c3;
+    color: #fff;
 }
 /*END Content-load*/
 
 /*START Content-video*/
 
-.section-video {
+.video__section {
     background-color: #e9e9e9;
+    width: 100%;
     margin-bottom: 95px;
+    position: relative;
     padding: 230px 0;
 }
 
-.section-play-video {
+.video__myVideo {
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.video__play-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
     height: 85px;
-    max-width: 90px;
+    width: 90px;
     background-color: #10c9c3;
-    color: #fff;
     border: 1px solid #10c9c3;
     border-radius: 43px;
     text-align: center;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 30px 0;    
+    cursor: pointer;
+    transform: translate(-50%, -50%);
 }
 
-.play-icon {
+.video__play-icon {
+    color: #fff;
 }
+/*START CSS-JS Content-video*/
+.video__section.play {
+    padding: 0;
+}
+.video__play-video.play {
+    display: none;
+}
+
+.video__myVideo.play {
+    display: block;
+}
+/*END CSS-JS Content-video*/
+
 /*END Content-video*/
 
 /*START Content-career*/
-.content-career {
+.career {
     background-color: #f5f5f5;
     padding: 100px 0;
 }
 
-.content-career-top, .content-career-bottom{
+.career--top, .career--bottom{
     display: flex;
 }
 
-.career-box {
+.career__box {
     width: 25%;
     text-align: center;
 }
 
-.career-icon {
+.career__icon {
     font-size: 40px;
     font-weight: 50;
     opacity: 0.7;
     margin-bottom: 28px;
 }
 
-.career-title {
+.career__title {
     font-size: 16px;
     opacity: 0.8;
     margin-bottom: 28px;
 }
 
-.career-label {
+.career__label {
     font-size: 15px;
     opacity: 0.5;
     line-height: 25px;
@@ -348,14 +387,14 @@
 /*END Content-career*/
 
 /*START Content-testimonials*/
-.content-testimonials {
+.testimonials {
     background-color: #10c9c3;
     color: #fff;
     text-align: center;
     padding: 165px;
 }
 
-.testimonials-mess {
+.testimonials__mess {
     font-size: 29px;
     line-height: 37 px;
     margin-bottom: 30px;
@@ -363,73 +402,61 @@
 /*END Content-testimonials*/
 
 /*START Content-Badge-Logo*/
-.content-badge-logo {
+.badge {
     padding: 30px 0;
 }
 
-.badge-logo-wrap {
+.badge__wrap {
     display: flex;
 }
 
-.badge-logo {
+.badge__logo {
     width: 20%;
-}
-
-.badge-logo2 {
-    
-}
-
-.badge-logo3 {
-   
-}
-
-.badge-logo4 {
-
 }
 
 /*END Content-Badge-Logo*/
 
 /*Content Contact*/
-.content-contact {
+.contact {
     background-color: #f5f5f5;
 }
 
-.content-contact-form {
+.contact__form {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
 }
 
-.contact-row {
+.contact__row {
     width: 675px;
 }
 
-.contact-col {
+.contact--col {
     width: 100%;
     display: flex;
     gap: 30px;
 }
 
-.form-half  {
+.form--half  {
    width: 50%;
 }
 
-.contact-col, .contact-col-full, 
-.contact-col-height {
+.contact--col, .contact--col-full, 
+.contact--col-height {
     margin-bottom: 28px;
 }
 
-.form-control {
+.form--control {
     width: 100%;
 }
 
-.form-half, .form-control {
+.form--half, .form--control {
     padding: 15px 0 15px 20px;
     border: none;
 }
 
-.contact-submit {
+.contact__submit {
     width: 183px;
     height: 56px;
     background-color: #10c9c3;
@@ -447,71 +474,71 @@
     padding: 90px 0;
 }
 
-.footer-wrap {
+.footer__wrap {
     display: flex;
 }
 
-.footer-infor {
+.footer__infor {
     margin-right: 235px;
 }
 
-.infor-title {
+.footer__infor-title {
     font-size: 20px;
     margin-bottom: 20px;
 }
 
-.infor-text, .contact-text, .name-heading, .name-choice, .name-app {
+.footer__infor-text, .footer__contact-text, .footer__name-heading, .footer__name-choice, .footer__name-app {
     line-height: 33px;
     opacity: 0.5;
 }
 
-.footer-title {
+.footer__title {
     display: flex;
 }
 
-.footer-contact {
+.footer__contact {
     margin-right: 135px;
 }
 
-.contact-text li {
+.footer__contact-text li {
     list-style: none;
 }
 
-.contact-text li a {
+.footer__contact-text li a {
     color: #fff;
     text-decoration: none;
 }
 
-.footer-heading {
+.footer__heading {
     margin-right: 35px;
 }
 
-.name-heading li  {
+.footer__name-heading li  {
     list-style: none;
 }
 
-.name-heading li a {
+.footer__name-heading li a {
     color: #fff;
     text-decoration: none;
 }
 
-.footer-choice {
+.footer__choice {
     margin-right: 125px;
 }
-.name-choice li  {
+.footer__name-choice li  {
     list-style: none;
 }
 
-.name-choice li a {
+.footer__name-choice li a {
     color: #fff;
     text-decoration: none;
 }
 
-.name-app li  {
+.footer__name-app li  {
     list-style: none;
 }
 
-.name-app li a {
+.footer__name-app li a {
     color: #fff;
     text-decoration: none;
 }
@@ -524,15 +551,28 @@
         overflow: hidden;
     }
     
-    .ham {
+    .header__ham {
         display: block;
         position: relative;
         z-index: 1000;
     }
 
-    .menu-icon-close {
-        visibility: hidden;
+    #isOpen {
+        display: inline-block;
     }
+
+    #isClose {
+        display: none;
+    }
+
+    #isOpen.hidden {
+        display: none;
+    }
+
+    #isClose.show {
+        display: inline-block;
+    }
+
     .nav {
         /*display: none;*/
         width: 100%;
@@ -545,12 +585,12 @@
         transition: 0.7s ease-in-out;
     }
     
-    .nav-logo {
+    .nav__logo {
       display: inline-block;
       margin: 30px 10px;
     }
 
-    .nav-list {
+    .nav__list {
         background-color: #10c9c3;
         height: 100vh;
         width: 50%;
@@ -558,7 +598,7 @@
         flex-direction: column;
     }
 
-    .nav-list li {
+    .nav__list li {
         padding:10px 0;
         border-bottom: 1px solid #252525;
     }
@@ -567,92 +607,92 @@
         left: 0;
     }
 
-    .menu-icon-close.active {
-        visibility: visible;
-    }
-
     .banner {
         margin-top: 0;
     }
 
-    .banner-box {
+    .banner__box {
         margin: auto;
     }
 
-    .section-sub-heading {
+    .section__sub-heading {
         line-height: 1.2;
     }
 
-    .skill-left::after {
+    .skill--left::after {
         width: 0;
     }
 
-    .skill-left {
+    .skill--left {
         width: 100%;
     }
 
-    .content-stat-wrap {
+    .stat__wrap {
         display: block;
     }
 
-    .grid-top {
+    .grid--top {
         display: block;
     }
 
-    .grid-bottom {
+    .grid--mid {
         display: block;
     }
 
-    .grid-box {
+    .grid--bottom.load {
+        display: block;
+    }
+
+    .grid__box {
         width: 100%;
     }
 
-    .content-career-top, .content-career-bottom{
+    .career--top, .career--bottom{
         display: block;
     }
 
-    .career-box {
+    .career__box {
         width: 100%;
     }
 
-    .content-testimonials {
+    .testimonials {
         font-size: 15px;
         padding: 5px 5px;
     }
 
-    .badge-logo-wrap {
+    .badge__wrap {
         display: flex;
         flex-direction: column;
         width: 100%;
         align-items: center;
     }
 
-    .badge-logo {
+    .badge__logo {
         margin-bottom: 20px;
     }
 
-    .footer-wrap {
+    .footer__wrap {
         display: block;
         text-align: center;
     }
 
-    .footer-infor {
+    .footer__infor {
         margin-right: 0;
     }
 
-    .footer-title {
+    .footer__title {
         margin-top: 10px;
         justify-content: space-evenly
     }
-    .footer-contact {
+    .footer__contact {
         margin-right: 0;
     }
 
-    .footer-heading {
+    .footer__heading {
         margin-right: 0;
     }
 
-    .footer-choice {
+    .footer__choice {
         margin-right: 0;
     }
 }
