--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -10,18 +10,17 @@
   max-width: 1200px;    
   margin: 0 auto;         
   padding-left: 40px;     
-  padding-right: 20px;   
+  padding-right: 20px;
 }
 
 /*Start Header*/
 .header {
-    height: 70px;
     background-color: #e9e9e9;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    padding-top: 20px;
+    padding: 20px 0;
     z-index: 3;
 }
 
@@ -232,7 +231,7 @@
 
 .grid__box {
     width: 25%;
-    padding: 145px 0;
+    padding: 100px 0;
     text-align: center;
 }
 .grid--top .grid__box:nth-child(even) {
@@ -348,6 +347,13 @@
 .career__box {
     width: 25%;
     text-align: center;
+}
+
+.career__box:hover {
+    padding-top: 10px;
+    transform: translateY(-8px);
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.15);
+    color: #10c9c3;
 }
 
 .career__icon {
@@ -568,11 +574,12 @@
     .no-scroll {
         overflow: hidden;
     }
-    
+
     .header__ham {
         display: block;
         position: relative;
         z-index: 1000;
+        
     }
 
     #isOpen {
@@ -619,7 +626,7 @@
 
     .nav__list li {
         padding:10px 0;
-        border-bottom: 1px solid #838383;
+        border-bottom: 1px solid #dddddd;
         
     }
     .nav.active {
@@ -651,20 +658,26 @@
         display: block;
     }
 
+    .stat__box {
+        margin-left: 10px;
+        margin-bottom: 20px;
+    }
+
     .grid--top {
-        display: block;
+
     }
 
     .grid--mid {
-        display: block;
+
+
     }
 
     .grid--bottom.load {
-        display: block;
+
     }
 
     .grid__box {
-        width: 100%;
+        width: 50%;
     }
 
     .career--top, .career--bottom{
@@ -676,8 +689,19 @@
     }
 
     .testimonials {
-        font-size: 15px;
-        padding: 5px 5px;
+        
+    }
+
+    .swiper-wrapper {
+        padding: 30px 0;
+    }
+
+    .testimonials__mess {
+        font-size: 14px;
+    }
+
+    .swiper-button-prev, .swiper-button-next {
+        display: none !important;
     }
 
     .badge__wrap {
